--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
-  "name": "wabot-aq",
+  "name": "hanafi-botz",
   "description": "Lightweight WhatsApp Bot",
   "repository": "https://github.com/Nurutomo/wabot-aq",
-  "logo": "https://node-js-sample.herokuapp.com/node.png",
+  "logo": https://telegra.ph/file/bfec2eae0c5588504dfa4.jpg",
   "keywords": ["bot", "whatsapp", "whatsapp-bot"]
 }
